<resources>
    <string name="API_ADDRESS">https://maps.googleapis.com/maps/api/geocode/json?key=</string>
    <string name="API_ADD_DOC_PATH">add-doc</string>
    <string name="API_CHECK_APPLICATION_STATUS">check-application-status</string>
    <string name="API_DELETE_DOC_PATH">delete-docs</string>
    <string name="API_DELETE_SHARED_RECEIVED_DOC_PATH">delete-shared-rc</string>
    <string name="API_EDIT_DELETE_RELATIVE">edit-relatives-info</string>
    <string name="API_EMERGENCY_ALERT">emergency-contact-info</string>
    <string name="API_GENERAL_NOTIFICATION">get-notification</string>
    <string name="API_LOGIN_SUCCESS_PATH">login-success</string>
    <string name="API_MOCK_TEST">https://sarathi.parivahan.gov.in/sarathiWS/rsServices/ServicesOnStall/getQuestionsByLanguageAndStateAsStr</string>
    <string name="API_REGISTER">register</string>
    <string name="API_SHARE_PATH">share-rc</string>
    <string name="API_SIGN_UP">sign-up</string>
    <string name="API_TOW_INFO">tow-info</string>
    <string name="API_UPDATE_AADAHAR_DETAILS">update-user-detail</string>
    <string name="API_UPDATE_EMERGENCY">update-emergency-info</string>
    <string name="API_UPDATE_PERSONAL_INFO">edit-personal-info</string>
    <string name="API_UPDATE_RELATIVE">update-relatives-info</string>
    <string name="API_UPLOAD_IMAGE">upload-image</string>
    <string name="API_VERIFY_OTP_PATH">verify-otp</string>
    <string name="API_check_registered_number">check-registered-number</string>
    <string name="LOG_OUT">logout</string>
    <string name="MAP_API_KEY">AIzaSyBonLMw3hvvuvMg9wwtRBWk8ITFIwjpyJ4</string>
    <string name="MAP_AP_KEY">AIzaSyCLwy-t9mH7z3y5iP0c7Fcip1V5idQreRg</string>
    <string name="My_Virtual_DL">My Virtual DL</string>
    <string name="My_Virtual_RC">My Virtual RC</string>
    <string name="Notice_related">Notice Related Services</string>
    <string name="Now">Now</string>
    <string name="Ok">OK</string>
    <string name="Other_det">Other Description</string>
    <string name="Proceed">Proceed</string>
    <string name="Remarks">Remarks :</string>
    <string name="_1656565233221">#1656565233221</string>
    <string name="_1_the_mentioned_services_are_faceless_and_hence_you_need_not_to_visit_rto_for_the_same">1. The mentioned services are faceless and hence you need not to visit RTO for the same.</string>
    <string name="_2_the_acceptance_of_application_is_subject_to_successful_scrutiny_of_uploaded_data_documents_in_accordance_with_legal_provisions">2. The acceptance of application is subject to successful scrutiny of uploaded data/documents in accordance with legal provisions.</string>
    <string name="_continue">Continue</string>
    <string name="_continue_sign_in">Continue</string>
    <string name="aadhaar_no">Aadhaar Number</string>
    <string name="aadhaar_no_1">Aadhaar No.</string>
    <string name="aadhaar_otp_sent_registe">OTP has been sent to your aadhaar linked mobile no</string>
    <string name="aadhaar_statement">I hereby state that , I have no objection in authenticating myself with mobile number based authentication system and consent to providing my mobile number and One Time Pin (OTP) data for the purposes of registering with mParivahan mobile app. \n \nI understand that the mobile number and the OTP I provide for authentication shall be used only for authenticating my identity.\n</string>
    <string name="aadhar_bases_ekyc">Aadhaar based e-KYC consent</string>
    <string name="aadhar_no">Aadhaar No.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About Us</string>
    <string name="about_content">Under Digital India, Government has launched a latest initiative which delivers improved service access to citizens through a mobile based application. This application empowers citizens to get access to the details corresponding to any valid RC and/or DL numbers anytime anywhere just by a click of a button on the mobile app. Instant access and mobility shall benefit the citizens and government departments alike in terms of ready information and transparency in the system.</string>
    <string name="ac_fitted">AC Fitted</string>
    <string name="acc_history">Accident Reports</string>
    <string name="acc_state">You have not reported any accident as of now. If you want to create accident report</string>
    <string name="acc_state_2">Please click here to Register Accident Report.</string>
    <string name="accept_app">The acceptance of application is subject to successful security of uploaded data/documents in accordance with legal provisions.</string>
    <string name="accident_location">Accident Location</string>
    <string name="accident_report">Accident Report\nStatus</string>
    <string name="accused_1">Accused</string>
    <string name="accused_name">Accused Name</string>
    <string name="acknowledgement_no">Acknowledgement No.</string>
    <string name="acknowledgement_slip">Acknowledgement Slip</string>
    <string name="acknowledgements">Acknowledgement</string>
    <string name="acknowlegement_no">Acknowlegement No</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="active">Active</string>
    <string name="active_">Active</string>
    <string name="add_amount">Additional Amount</string>
    <string name="add_driving_school">Applicant trained from driving school (Click here to add)</string>
    <string name="add_event">ADD CALENDAR EVENT</string>
    <string name="add_fail">Unable to add details! Please try again</string>
    <string name="add_more">Add more</string>
    <string name="add_my_vehicle_s">Add My Vehicle(s)</string>
    <string name="add_nominee_detail_s">Add Nominee Detail\'s</string>
    <string name="add_passanger_list">Add Passanger List</string>
    <string name="add_to_dashboard">Add To My DashBoard</string>
    <string name="add_to_dashboard_for_virtual_dl">Add to Dashboard for Virtual DL</string>
    <string name="add_to_dl">Add to Dashboard for Virtual DL</string>
    <string name="add_to_rc">Add to Dashboard for Virtual RC</string>
    <string name="add_virtual_dl">Add Virtual DL</string>
    <string name="add_virtual_rc">Add Virtual RC</string>
    <string name="add_your_emergency_contacts">Add Your Emergency Contacts</string>
    <string name="addherTitle">Aadhar based eKYC of vehicle owner</string>
    <string name="addition">Addition Of</string>
    <string name="addition_of_class">Addition Of Class</string>
    <string name="additional_amount1">Additional Amount1</string>
    <string name="additional_amount_2">Additional Amount 2</string>
    <string name="addr_fail">Problem in getting address</string>
    <string name="address">Address</string>
    <string name="address_change">Address Change</string>
    <string name="address_could_not_be_found">Unable to get Location</string>
    <string name="address_details">Address Details</string>
    <string name="address_l">Address</string>
    <string name="administration">Administration :</string>
    <string name="advisory">Ministry Notification</string>
    <string name="advisory_new">Advisory</string>
    <string name="afternoon">After noon</string>
    <string name="age">Age (in Yrs)</string>
    <string name="age_sarthi">Age</string>
    <string name="age_should_be_18_years_or_older">Age should be 18 years or older.</string>
    <string name="agree_terms">By Signing up, you agree to NextGen mParivahan \n Terms and conditions </string>
    <string name="agree_terms_cond">I have read and agree with the Terms and Conditions</string>
    <string name="agree_terms_cond_new">I agree to the Terms and Conditions</string>
    <string name="agree_with_aadhar_terms">I have read and agree to Aadhaar based e-KYC consent</string>
    <string name="agree_with_adhar_terms">I have read an agree with the Aadhaar based e-KYC consent</string>
    <string name="agree_with_terms">I have read an agree with the VID based e-KYC consent</string>
    <string name="agree_with_vid_terms">I have read and agree to VID based e-KYC consent</string>
    <string name="aitpPermit">AITP Valid Upto</string>
    <string name="aitpPermitno">AITP Permit No</string>
    <string name="alert">Alert!</string>
    <string name="alert_closed_ones">ALERT CLOSE ONES</string>
    <string name="alert_dob">Please verify your DL details \nusing DOB</string>
    <string name="all">ALL</string>
    <string name="all_forms">All Forms</string>
    <string name="app_name">NextGen mParivahan</string>
    <string name="cancel">Cancel</string>
    <string name="chassis_no_last_five_digits">Chassis No. (Last 5 Digits)*</string>
    <string name="enter_last_five_digits">Enter last five digits</string>
    <string name="enter_mobile">Enter your mobile no.</string>
    <string name="enter_rc_no_for_pending_transaction">Enter Vehicle No.</string>
    <string name="enter_vehicle_no">Enter Vehicle no.</string>
    <string name="log_out">Logout</string>
    <string name="mentioned_services">1. The mentioned services are faceless and hence you need not to visit RTO for the same</string>
    <string name="menu_near">Near By</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_trans">Transport Services</string>
    <string name="my_vehicles">My Vehicles</string>
    <string name="new_note">The acceptance of application is subject to successful scrutiny of uploaded data/documents in accordance with legal provisions.</string>
    <string name="notes">Note :-</string>
    <string name="other_new_vehicle">Enter New Vehicle</string>
    <string name="please_enter_mobile">Please enter your mobile no.</string>
    <string name="privacy">Privacy Policy</string>
    <string name="proceed_new">Proceed &gt;</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="vehicle_no">Vehicle No*</string>
    <string name="vehicle_number">Vehicle No.</string>
    <string name="vehicle_services">Vehicle services</string>
</resources>