<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_menu_camera"
            android:id="@+id/nav_home"
            android:visible="false"/>
        <item
            android:icon="@drawable/ic_profile"
            android:id="@+id/nav_profile"
            android:title="@string/menu_profile"/>
        <item
            android:icon="@drawable/ic_transport"
            android:id="@+id/nav_ts"
            android:title="@string/menu_trans"/>
        <item
            android:icon="@drawable/ic_invoice_transaction"
            android:id="@+id/nav_docs"
            android:title="My Transactions"/>
        <item
            android:icon="@drawable/ic_document"
            android:id="@+id/virtual_docs"
            android:title="Virtual Documents"/>
        <item
            android:icon="@drawable/ic_nearby"
            android:id="@+id/nav_near"
            android:title="@string/menu_near"/>
        <item
            android:icon="@drawable/ic_helpsupport"
            android:id="@+id/nav_help"
            android:title="Help"/>
        <item
            android:icon="@drawable/ic_share"
            android:id="@+id/nav_share"
            android:title="@string/menu_share"/>
        <item
            android:icon="@drawable/language"
            android:id="@+id/language"
            android:title="Language"/>
        <item
            android:icon="@drawable/setting"
            android:id="@+id/setting"
            android:visible="false"
            android:title="Settings"/>
        <item
            android:icon="@drawable/privacy_policy"
            android:id="@+id/privacy_policy"
            android:title="@string/privacy"/>
        <item
            android:icon="@drawable/ic_about"
            android:id="@+id/nav_about"
            android:title="@string/about"/>
        <item
            android:icon="@drawable/ic_logout"
            android:id="@+id/nav_logout"
            android:title="@string/log_out"/>
    </group>
</menu>
