<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <include layout="@layout/mvvm_header"/>
            <LinearLayout
                android:gravity="top|left"
                android:orientation="vertical"
                android:background="@drawable/mvvm_linear"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <com.nic.mparivahan.MyTextView
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/vehicle_services"/>
                    <com.nic.mparivahan.MyTextView
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/vehicle_number"/>
                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/txt_vehicle_number"
                        android:background="@drawable/sign_in_back"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/vehicle_number"
                        android:textAllCaps="true"/>
                    <TextView
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/please_enter_mobile"
                        android:justificationMode="inter_word"/>
                    <EditText
                        android:textColor="@color/black"
                        android:id="@+id/txt_mobile_number"
                        android:background="@drawable/sign_in_back"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/enter_mobile"
                        android:textAllCaps="true"/>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:paddingBottom="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">
                        <CheckBox
                            android:gravity="center"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"/>
                        <com.nic.mparivahan.MyTextView
                            android:textSize="14sp"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:gravity="top|left"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="15dp"
                            android:text="@string/agree_terms_cond"/>
                    </LinearLayout>
                    <com.nic.mparivahan.MyTextView
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/notes"/>
                    <TextView
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/mentioned_services"
                        android:justificationMode="inter_word"/>
                    <TextView
                        android:textColor="@color/black"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/accept_app"
                        android:justificationMode="inter_word"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
