<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/layerlistexample"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">
    <include
        android:id="@+id/topHolder"
        layout="@layout/vahan_echallan_header"/>
    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg_style"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp">
        <TextView
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/vahan_service_lable"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/enter_new_vehicle_linear"
            android:background="@drawable/edit_text_style"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textSize="12dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/enter_vehicle_no"
                android:background="@drawable/blue_gradient_background"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/enter_vehicle_no"
                android:layout_weight="2"
                android:textAllCaps="false"
                android:fontFamily="@font/nexgenttf"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/vehicle_linear"
            android:background="@drawable/edit_text_style"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="12dp"
                android:textColor="@color/white"
                android:gravity="center"
                android:id="@+id/btn_my_vehicle"
                android:background="@drawable/button_style"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/my_vehicles"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:fontFamily="@font/nexgenttf"/>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="12dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/btn_othe_vehicle"
                android:background="@android:color/transparent"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:text="@string/other_new_vehicle"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:fontFamily="@font/nexgenttf"/>
        </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/vehicleServiceRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:id="@+id/other_New_VehicleLayout"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:id="@+id/vehicle_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/vehicle_no"
                    android:fontFamily="@font/nexgenttf"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:textSize="12dp"
                    android:id="@+id/vehicle_number"
                    android:background="@drawable/edit_text_style"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/enter_rc_no_for_pending_transaction"
                    android:singleLine="true"
                    android:maxLength="10"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
                    android:inputType="textCapCharacters"
                    android:imeOptions="actionNext"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:textSize="12dp"
                    android:textColor="@color/black"
                    android:id="@+id/chasis_no_last_five_digits"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/chassis_no_last_five_digits"
                    android:fontFamily="@font/nexgenttf"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:textSize="12dp"
                    android:id="@+id/chassi_number"
                    android:background="@drawable/edit_text_style"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="3dp"
                    android:hint="@string/enter_last_five_digits"
                    android:singleLine="true"
                    android:maxLength="5"
                    android:digits="1234567890qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.*~-"
                    android:inputType="textCapCharacters"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/notes"/>
        <TextView
            android:textSize="12dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/new_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_note"
            android:fontFamily="@font/nexgenttf"/>
    </LinearLayout>
    <FrameLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/submit_layout"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp">
                <androidx.appcompat.widget.AppCompatButton
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:id="@+id/reset_button"
                    android:background="@drawable/button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/reset"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:fontFamily="@font/nexgenttf"
                    android:layout_marginEnd="5dp"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:textSize="12dp"
                    android:textColor="@color/white"
                    android:id="@+id/submit_button"
                    android:background="@drawable/button_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/submit"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:fontFamily="@font/nexgenttf"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:textSize="12dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:id="@+id/btn_cancel"
                android:background="@drawable/button_style"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_margin="5dp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:fontFamily="@font/nexgenttf"/>
        </LinearLayout>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
