<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dashboard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.nic.mparivahan.MyTextView
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/msg_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/app_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.nic.mparivahan.MyTextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/pop_up_proceed"
        android:background="@drawable/sign_in_new"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/proceed_new"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/pop_up_cancel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/msg_title"/>
    <com.nic.mparivahan.MyTextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_gravity="center"
        android:id="@+id/pop_up_cancel"
        android:background="@drawable/sign_in_new"
        android:padding="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/cancel"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pop_up_proceed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pop_up_proceed"
        app:layout_constraintTop_toTopOf="@+id/pop_up_proceed"/>
</androidx.constraintlayout.widget.ConstraintLayout>
